2007-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-digest-mail-forward): Pull articles processed
	from gnus-newsgroup-processable.

2007-04-16  Didier Verna  <didier@xemacs.org>

	* gnus-msg.el (gnus-configure-posting-styles): Handle
	message-signature-directory properly with :file syntax. Reported by
	"Leo".

2007-04-11  Didier Verna  <didier@xemacs.org>

	New user option: message-signature-directory.
	* gnus-msg.el (gnus-configure-posting-styles): Support it.
	* message.el (message-insert-signature): Ditto.
	* message.el (message-signature-file): Doc update.
	* message.el (message-signature-directory): New.

2007-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-inews-yank-articles): Use
	message-exchange-point-and-mark instead of exchange-point-and-mark.

2007-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-yank-original): Make sure cited text ends with
	newline; don't exchange point and mark.

2007-04-07  Chong Yidong  <cyd@stupidchicken.com>

	* tls.el (open-tls-stream): Properly handle case where there
	is no associated buffer.

2007-04-03  Thien-Thi Nguyen  <ttn@gnu.org>

	* gnus-msg.el (gnus-inews-yank-articles): Fix bug: After
	message-yank-original, make sure (< mark TEXT point).

2007-03-31  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-fill-column): New variable.
	(message-mode): Use it.  Add comment on a possible new hook.

	* nnmail.el (nnmail-spool-file): Mark as obsolete.
	(nnmail-get-new-mail): Reformat.

	* gnus-registry.el (gnus-registry-cache-save): Add FIXME comment.

	* gmm-utils.el: Fix Commentary.
	(gmm-tool-bar-from-list): Fix typo in doc string.

2007-03-27  Thien-Thi Nguyen  <ttn@gnu.org>

	* message.el (message-yank-original): Fix bug:
	Don't switch point and mark unnecessarily.

2007-03-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-put-addresses-in-ecomplete): Only fetch headers
	from the message heads.
